# guillotiere

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: main.yml
cli/: Cargo.toml  README.md
cli/src/: main.rs
cli/tests/: worst-case.sh
ffi/: Cargo.toml  README.md  cbindgen.toml
ffi/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: alloc_dealloc.rs
src/: allocator.rs  lib.rs  recording.rs
tests/: alloc.rs  basic.rs  clear_empty.rs  grow.rs  random.rs  simple.rs
