[package]
name = "guillotiere"
version = "0.6.2"
authors = ["Nicolas Silva <nical@fastmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "A dynamic 2D texture atlas allocator with fast deallocation."
repository = "https://github.com/nical/guillotiere"
documentation = "https://docs.rs/guillotiere/"
keywords = ["2d", "graphics"]

[features]
checks = []
serialization = ["serde", "euclid/serde"]

[dependencies]
euclid = "0.22.0"
serde = { version = "1.0", optional = true, features = ["serde_derive"] }
svg_fmt = "0.4.1"

[workspace]
members = ["cli", "ffi"]
