[package]
name = "guillotiere_ffi"
version = "0.6.0"
authors = ["Nicolas Silva <nical@fastmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "C-compatible foreign function interface for guillotiere."
repository = "https://github.com/nical/guillotiere"
documentation = "https://docs.rs/guillotiere_ffi/"
keywords = ["2d", "graphics", "ffi"]

[dependencies]
guillotiere = { version = "0.6.0", path = ".." }
